--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "cypress": "^13.6.0",
-    "joi": "^17.12.0"
+    "faker-js": "^1.0.0",
+    "joi": "^17.11.0"
   }
 }
